--- a/index.html
+++ b/index.html
@@ -1,1 +1,144 @@
 
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Selamat Datang</title>
+  <style>
+    /* Simple reset */
+    *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(135deg,#667eea 0%, #764ba2 50%, #f6d365 100%);
+      color:#fff;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:2rem;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+    }
+
+    .card{
+      width:min(920px,100%);
+      max-width:920px;
+      background: rgba(255,255,255,0.06);
+      border-radius:18px;
+      padding:2.25rem;
+      backdrop-filter: blur(6px) saturate(120%);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+      display:flex;
+      gap:1.5rem;
+      align-items:center;
+      animation: appear .9s ease forwards;
+    }
+
+    .logo {
+      flex:0 0 96px;
+      height:96px;
+      border-radius:14px;
+      background: linear-gradient(135deg, rgba(255,255,255,0.14), rgba(255,255,255,0.06));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:700;
+      font-size:28px;
+      color:rgba(255,255,255,0.95);
+      box-shadow: inset 0 -6px 20px rgba(0,0,0,0.15);
+    }
+
+    .content{
+      flex:1;
+      min-width:0;
+    }
+
+    h1{
+      font-size: clamp(28px, 4.2vw, 44px);
+      line-height:1.02;
+      margin-bottom:.35rem;
+      letter-spacing:-0.6px;
+    }
+
+    p.lead{
+      margin-bottom:1.05rem;
+      color:rgba(255,255,255,0.9);
+      font-size:clamp(14px, 1.8vw, 16px);
+    }
+
+    .actions{
+      display:flex;
+      gap:.75rem;
+      align-items:center;
+      flex-wrap:wrap;
+    }
+
+    .btn{
+      -webkit-tap-highlight-color: transparent;
+      background: linear-gradient(90deg, rgba(255,255,255,0.12), rgba(255,255,255,0.06));
+      border:1px solid rgba(255,255,255,0.12);
+      color:#fff;
+      padding:.6rem .95rem;
+      border-radius:12px;
+      cursor:pointer;
+      font-weight:600;
+      transition:transform .16s ease, box-shadow .16s ease, background .16s ease;
+      text-decoration:none;
+      display:inline-flex;
+      align-items:center;
+      gap:.6rem;
+    }
+
+    .btn:active{transform:translateY(1px)}
+    .btn.primary{
+      background: linear-gradient(90deg,#ff9a9e,#fecfef);
+      color:#2b0037;
+      box-shadow: 0 6px 18px rgba(255,154,158,0.18);
+      border: none;
+    }
+    .btn.ghost{
+      background:transparent;
+      border:1px solid rgba(255,255,255,0.14);
+    }
+
+    footer{
+      margin-top:1rem;
+      color:rgba(255,255,255,0.75);
+      font-size:13px;
+    }
+
+    @keyframes appear {
+      from{opacity:0;transform:translateY(10px) scale(.995)}
+      to{opacity:1;transform:none}
+    }
+
+    /* Responsive tweaks */
+    @media (max-width:640px){
+      .card{padding:1.25rem;gap:1rem;border-radius:14px}
+      .logo{flex-basis:72px;height:72px;font-size:22px;border-radius:10px}
+    }
+  </style>
+</head>
+<body>
+  <main class="card" role="main" aria-labelledby="welcome-heading">
+    <div class="logo" aria-hidden="true">WB</div>
+    <div class="content">
+      <h1 id="welcome-heading">Selamat Datang</h1>
+      <p class="lead">Halo! Selamat datang di halaman sederhana ini. Semoga harimu menyenangkan — klik tombol di bawah untuk memulai.</p>
+      <div class="actions">
+        <a href="#" class="btn primary" onclick="alert('Selamat datang!')">Mulai</a>
+        <a href="#" class="btn ghost" onclick="scrollToInfo(event)">Info Lainnya</a>
+      </div>
+      <footer>Halaman dibuat dengan HTML &amp; CSS — simpan file sebagai index.html lalu buka di peramban.</footer>
+    </div>
+  </main>
+
+  <script>
+    function scrollToInfo(e){
+      e.preventDefault();
+      alert('Di sini bisa ditambahkan lebih banyak informasi atau tautan.');
+    }
+  </script>
+</body>
+</html>
